# ABAC

./: Makefile  batch_test.py  bt2.py  compare.py  median.py  readme-old.txt  readme.md  readme.txt
XP/: Makefile  main.c  s01.c  s02.c  s03.c  s04.c  s05.c  s06.c  s07.c
archive/: Makefile-old  compare.py
archive/best/: best.c  f02_bypass.c  format.c  t39.c  t42.c  t44_paq8pxd.c  t45_calic.c  t46_slic4.c  t54.c  util.h
archive/e2/: Makefile  ac.h  ac_simd.h  e2.c  format.c  slic.c  t48.c  t55.c  tests2.c  tests3.c  tests4.c  tests6.c  transforms.c  transforms_cpu.c  transforms_ocl.c  transforms_vk.c  util.h
archive/entropy-battle/: Makefile
archive/entropy-battle/src/: abac.c  abac_sse2.c  ac.c  ac.h  arans.c  battle.h  codec.c  lossy.c  rans.c  rans_common.h  rans_sse2.c  transforms.c  uabs-WIP.c
archive/fast/: CMakeLists.txt  f04.c  f05.c  f06.c  f07.c  f08.c  f09.c  f10.c  f13.h  f16.c  f17.c  f18.c  f20.c  f23.c  f24.c  f26.c  f31.c  f32.c  f33.c  huffman.h  transforms.c  util.c
archive/imgcvt/: imgcvt.h
archive/pxView3D/: CMakeLists.txt  graphics.c  pxview3d.c  pxview3d.h  transform_c20.c  transforms.c  transforms_avx2.c  transforms_pt2.c  util.c
archive/rapid/: CMakeLists.txt  Makefile  r01.c  r01_kernels.h  rapid.c  rapid.h  util.c  util.h
archive/rapid/htscodecs/: arith_dynamic.c  fqzcomp_qual.c  permute.h  rANS_static.c  rANS_static16_int.h  rANS_static32x16pr.c  rle.c  tokenise_name3.c  varint.h
archive/src-old/: ac.h  huffman.h  test.cpp
archive/src-old-v2/: awm_ac.h  awm_util.h  transforms.c
best/: CMakeLists.txt  Makefile  ac.h  best.c  best.h  f23.c  format.c  profiler.h  t39.c  t42.c  t44_paq8pxd.c  t45_calic.c  t46_slic4.c  t47_slic5.c  transforms.c  util.c  util.h
cb2/: CMakeLists.txt  Makefile  cb2.c
cbm/: CMakeLists.txt  Makefile  cbm.c  cbm2tex.c  util.c  util.h  zzzcode_7z.txt  zzzcode_a01.txt  zzzcode_a03.txt  zzzcode_a04.txt  zzzcode_a04avx2.txt  zzzcode_a04d.txt  zzzcode_a05.txt  zzzcode_a05avx2.txt  zzzcode_ape.txt  zzzcode_aupk01.txt  zzzcode_aupk01a.txt  zzzcode_bcif.txt  zzzcode_bmf.txt  zzzcode_bmfs.txt  zzzcode_brotli11.txt  zzzcode_brotli9.txt  zzzcode_c01.txt  zzzcode_c01mix4.txt  zzzcode_c05.txt  zzzcode_c05st.txt  zzzcode_c10.txt  zzzcode_c10p.txt  zzzcode_c11.txt  zzzcode_c12.txt  zzzcode_c12n10.txt  zzzcode_c12n11.txt  zzzcode_c12n13.txt  zzzcode_c12n15.txt  zzzcode_c12n17.txt  zzzcode_c12n3.txt  zzzcode_c12n4.txt  zzzcode_c12n5.txt  zzzcode_c12n6.txt  zzzcode_c12n7.txt  (+249 more)
e2/: CMakeLists.txt  Makefile  ac.h  ac_simd.h  comp.spv  e2.c  e2.h  format.c  kernels.h  shader.comp  slic.c  slic2.c  slic3.c  t48.c  t49.c  t51.c  t52.c  t53.c  t54.c  t55.c  tests.c  tests2.c  tests3.c  tests4.c  tests5.c  tests6.c  transforms.c  transforms_gpu.c  util.c  util.h
eBench/: CMakeLists.txt  Makefile  bt2.c  bwt.c  c18.c  c18.h  cl_kernels.h  cl_kernels2.h  console.c  custom4.c  ebench.c  ebench.h  graphics.c  hadamard.c  image.c  intercept_malloc.h  lpc.c  ols4.c  ols5.c  ols6.c  ols7.c  ols8.c  ols9.c  palette.c  ssim.c  transform_c20.c  transforms.c  transforms_avx2.c  transforms_gpu.c  transforms_learned.c  transforms_pt2.c  util.c  util.h  wg4.c  wg5.c  wg6.c  wg7.c  window.c
entropy-battle/src/: abac.c  ac.c  ans128.c  arans.c  battle.h  codec.c  format.c  huffman.c  lz.c  main.c  rans.c  rans_common.h  rans_sse2.c  transforms.c  util.c  util.h
fast/: CMakeLists.txt  Makefile  ac.h  f01.c  f02.c  f03.c  f04.c  f05.c  f06.c  f07.c  f08.c  f09.c  f10.c  f11.c  f12.c  f13.c  f13.h  f14.c  f15.c  f16.c  f17.c  f18.c  f19.c  f20.c  f21.c  f22.c  f23.c  f24.c  f25.c  f26.c  f27.c  f28.c  f29.c  f30.c  f32.c  f33.c  fast.c  fast.h  format.c  huffman.c  (+7 more)
imgcvt/: CMakeLists.txt  Makefile  imgcvt.c  util.c  util.h
lossy/: CMakeLists.txt  ac.h  lossy.c  lossy.h  tests.c  transforms.c  util.c  util.h
ppmcodec/: CMakeLists.txt  Makefile  blist.h  c01.c  c02.c  c03.c  c04.c  c05.c  c06.c  c07.c  c08.c  c09.c  c10.c  c11.c  c12.c  c12m.c  c13.c  c14.c  c15.c  c16.c  c17.c  c18.c  c19.c  c20-20241028-2-div-free-mixing.c  c20.c  c21.c  c22.c  c23.c  c24.c  c25.c  c26.c  c27.c  c28.c  c29.c  c30.c  c31.c  c32.c  c33.c  c34.c  c35.c  (+29 more)
ppmcodec/backup/: c12-20250629-d.c  c22_backup.c  c24-20241226-b4-mixinCDF.c  c24-20250105.c  c24-20250108.c  c24_backup.c  c29-20250303.c
ppmcodec/htscodecs/: config.h  pack.c  rANS_static32x16pr_avx2.c  rANS_static4x16pr.c  utils.h  version.h
psnr/: Makefile  chism.c  diff.c  hist.c  psnr.c  psnr.py  ssim.c  wavpsnr.c
pxView3D/: CMakeLists.txt  console.c  graphics.c  graphics.c.bak  pxview3d.c  pxview3d.c.bak  pxview3d.h  pxview3d.h.bak  transform_c20.c  transforms.c  transforms.c.bak  transforms_avx2.c  transforms_gpu.c  transforms_learned.c  transforms_pt2.c  util.c  util.h  window.c
sli/: CMakeLists.txt  Makefile  a01.c  a02.c  a03.c  a04.c  a05.c  sli.c
sli/fpc/: fpc.c  fpc.h
src/: ac.cpp  ac.h  huffman.cpp  lz77.cpp  lz77.h  test.cpp  vector_bool.h
src-v2/: awm_ac.c  awm_ac.h  awm_main.c  awm_util.c  awm_util.h  transforms.c
